# oxidized-watcher

./: .env  .gitignore  Cargo.toml  ExampleConfig.json
migrations/2022-03-09-215307_initial/: up.sql
migrations/2022-03-10-174243_initial/: up.sql
src/: config.rs  event_handler.rs  main.rs  util.rs
src/commands/: mod.rs  note.rs  ping.rs
src/database/: mod.rs  models.rs  schema.rs
