[package]
name = "oxidized-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
figment = { version = "0.10.6", features = ["json"] }
serenity = "0.10.10"
